--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 		</dependency>
 	</dependencies>
 
-	<!--<build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -104,7 +104,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>-->
+	</build>
 	<repositories>
 		<repository>
 			<id>spring-milestones</id>
