--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.h2.console.path=/h2-console
 ##################################################
 # Thymeleaf
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates
+spring.thymeleaf.prefix=classpath:/templates/
