--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,20 @@ server.port=8070
 spring.datasource.url=jdbc:h2:mem:javajo_jewels_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.platform=h2
-spring.datasource.data=classpath:/sql/import.sql
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.platform=h2
 ##################################################
 # enable H2 web console and set url for web console
 # http://localhost:8090/h2-console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:/sql/schema.sql
+spring.sql.init.data-locations=classpath:/sql/data.sql
+##################################################
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=true
 ##################################################
 # Thymeleaf
 spring.thymeleaf.cache=false
