下記の対応とlogbackの追加
https://github.com/orgs/java-women/projects/1/views/1?pane=issue&itemId=109050213&issue=java-women%7Ctechbookfest_2025%7C40

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jpa.defer-datasource-initialization=true
 # Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
+##################################################
+# log
+spring.profiles.active=develop
