--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.h2.console.path=/h2-console
 # Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
+##################################################
+# SpringMVC
+spring.mvc.hiddenmethod.filter.enabled=true
