カート画面を追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ spring.jpa.defer-datasource-initialization=true
 # Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
+spring.web.resources.cache.cachecontrol.no-cache=true
+spring.mvc.hiddenmethod.filter.enabled=true
 ##################################################
 # log
 spring.profiles.active=develop
