ゴミを削除

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.web.resources.cache.cachecontrol.no-cache=true
 spring.mvc.hiddenmethod.filter.enabled=true
 ##################################################
 # log
-spring.profiles.active=develop
+spring.profiles.active=develop
